--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "asyncpg>=0.31.0",
     "fastapi[standard]>=0.128.5",
+    "google-adk>=0.4.0",
     "pgsql>=2.0",
     "pwdlib[argon2]>=0.3.0",
     "pyjwt>=2.11.0",
